# samar_lite

./: .gitignore  Cargo.toml  Makefile  README.md  build.bat  main.rs  query_test.fasta  real_query_data.fasta  real_ref_data.fasta  test.fasta  test_P.fasta
alignr/: Cargo.toml
alignr/src/: lib.rs  main.rs
alignr/tests/: b_search_mmp_test.rs  best_in_frame_max_test.rs
reference/: Cargo.toml
reference/src/: main.rs
src/: lib.rs  main.rs  translate.rs
testdata/: config_test.yaml  reads_1_1.fastq  reads_1_2.fastq  reads_2_1.fastq  reads_2_2.fastq  reads_3_1.fastq  reads_3_2.fastq  reads_4_1.fastq  reads_4_2.fastq  reads_5_1.fastq  reads_5_2.fastq  reads_6_1.fastq  reads_6_2.fastq  ref.fa
workflow/: Snakefile
workflow/config/: config.yaml
workflow/env/: counting.yaml  r.yaml  rust.yaml
workflow/scripts/: fastq-interleave.sh  last2deseq.R  seq_count.py
