[package]
name = "alignr"
version = "0.1.0"
authors = ["kylesans <kyle_santiago@dlsu.edu.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
succinct = "0.5.2"
bv = "*"
byteorder = "1.4.2"
suffix_array = "0.5.0"
protein-translate = "0.2.0"
argparse = "0.2.2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
criterion = "0.3"

