[package]
name = "alignr"
version = "0.1.0"
authors = ["kylesans <kyle_santiago@dlsu.edu.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.39.1"
succinct = "0.5.2"
bv = "0.11.1"
byteorder = "1.4.2"
suffix_array = "0.5.0"
protein-translate = "0.2.0"
argparse = "0.2.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
twox-hash = "1.6.2"

[dev-dependencies]
criterion = "0.3"

