[package]
name = "ref-align"
version = "0.1.0"
authors = ["kylesans <kyle_santiago@dlsu.edu.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
bio = "0.39.1"
serde = { version = "1.0.117", features = ["derive"] }
bv = "0.11.1"
argparse = "0.2.2"
twox-hash = "1.6.2"
